Begin with test 1 in unittest3

--- a/projects/freemche/dominion/Makefile
+++ b/projects/freemche/dominion/Makefile
@@ -38,12 +38,15 @@ unittest1: unittest1.c dominion.o rngs.o testingHelpers.o
 unittest2: unittest2.c dominion.o rngs.o testingHelpers.o
 	gcc -o unittest2 -g unittest2.c dominion.o rngs.o testingHelpers.o $(CFLAGS)
 
+unittest3: unittest3.c dominion.o rngs.o testingHelpers.o
+	gcc -o unittest3 -g unittest3.c dominion.o rngs.o testingHelpers.o $(CFLAGS)
+
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-all: playdom player testDrawCard testBuyCard badTestDrawCard unittest1 unittest2
+all: playdom player testDrawCard testBuyCard badTestDrawCard unittest1 unittest2 unittest3
 
-unittestresults.out: unittest1.c unittest2.c dominion.c rngs.c testingHelpers.c
+unittestresults.out: unittest1.c unittest2.c unittest3.c  dominion.c rngs.c testingHelpers.c
 	echo "Result for running unit tests:" > unittestresults.out
 
 	echo "unittest1.c:  If problems are not reported, the test is successful" >> unittestresults.out
@@ -56,5 +59,10 @@ unittestresults.out: unittest1.c unittest2.c dominion.c rngs.c testingHelpers.c
 	unittest2 >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 
+	echo "unittest3.c:  If problems are not reported, the test is successful" >> unittestresults.out
+	gcc -o unittest3 unittest3.c dominion.o rngs.o testingHelpers.o $(CFLAGS)
+	unittest3 >> unittestresults.out
+	gcov dominion.c >> unittestresults.out
+
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe unittest1 unittest2 *.out badTestDrawCard
+	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe unittest1 unittest2 unittest3 *.out badTestDrawCard
