--- a/projects/freemche/dominion/Makefile
+++ b/projects/freemche/dominion/Makefile
@@ -44,12 +44,15 @@ unittest3: unittest3.c dominion.o rngs.o testingHelpers.o
 unittest4: unittest4.c dominion.o rngs.o testingHelpers.o
 	gcc -o unittest4 -g unittest4.c dominion.o rngs.o testingHelpers.o $(CFLAGS)
 
+cardtest1: cardtest1.c dominion.o rngs.o testingHelpers.o
+	gcc -o cardtest1 -g cardtest1.c dominion.o rngs.o testingHelpers.o $(CFLAGS)
+
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-all: playdom player testDrawCard testBuyCard badTestDrawCard unittest1 unittest2 unittest3 unittest4
+all: playdom player testDrawCard testBuyCard badTestDrawCard unittest1 unittest2 unittest3 unittest4 cardtest1
 
-unittestresults.out: unittest1.c unittest2.c unittest3.c unittest4.c  dominion.c rngs.c testingHelpers.c
+unittestresults.out: unittest1.c unittest2.c unittest3.c unittest4.c cardtest1.c  dominion.c rngs.c testingHelpers.c
 	echo "Result for running unit tests:" > unittestresults.out
 
 	echo "unittest1.c:  If problems are not reported, the test is successful" >> unittestresults.out
@@ -57,20 +60,25 @@ unittestresults.out: unittest1.c unittest2.c unittest3.c unittest4.c  dominion.c
 	unittest1 >> unittestresults.out
 	gcov unittest1 dominion.c >> unittestresults.out
 
-	echo "unittest2.c:  If problems are not reported, the test is successful" >> unittestresults.out
+	echo "unittest2.c:  " >> unittestresults.out
 	gcc -o unittest2 unittest2.c dominion.o rngs.o testingHelpers.o $(CFLAGS)
 	unittest2 >> unittestresults.out
 	gcov unittest2 dominion.c >> unittestresults.out
 
-	echo "unittest3.c:  If problems are not reported, the test is successful" >> unittestresults.out
+	echo "unittest3.c:  " >> unittestresults.out
 	gcc -o unittest3 unittest3.c dominion.o rngs.o testingHelpers.o $(CFLAGS)
 	unittest3 >> unittestresults.out
 	gcov unittest3 dominion.c >> unittestresults.out
 
-	echo "unittest4.c:  If problems are not reported, the test is successful" >> unittestresults.out
+	echo "unittest4.c:  " >> unittestresults.out
 	gcc -o unittest4 unittest4.c dominion.o rngs.o testingHelpers.o $(CFLAGS)
 	unittest4 >> unittestresults.out
 	gcov unittest4 dominion.c >> unittestresults.out
 
+	echo "cardtest1.c:  " >> unittestresults.out
+	gcc -o cardtest1 cardtest1.c dominion.o rngs.o testingHelpers.o $(CFLAGS)
+	cardtest1 >> unittestresults.out
+	gcov cardtest1 dominion.c >> unittestresults.out
+
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe unittest1 unittest2 unittest3 unittest4 *.out badTestDrawCard
+	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe unittest1 unittest2 unittest3 unittest4 cardtest1 *.out badTestDrawCard
