--- a/projects/freemche/dominion/Makefile
+++ b/projects/freemche/dominion/Makefile
@@ -16,6 +16,9 @@ randomtestcard1:  randomtestcard1.c dominion.o rngs.o
 randomtestcard2:  randomtestcard2.c dominion.o rngs.o
 	gcc -o randomtestcard2 -g randomtestcard2.c dominion.o rngs.o $(CFLAGS)
 
+randomtestadventurer:  randomtestadventurer.c dominion.o rngs.o
+	gcc -o randomtestadventurer -g randomtestadventurer.c dominion.o rngs.o $(CFLAGS)
+
 testDrawCard: testDrawCard.c dominion.o rngs.o
 	gcc  -o testDrawCard -g  testDrawCard.c dominion.o rngs.o $(CFLAGS)
 
@@ -50,11 +53,17 @@ randomtestcard2.out: randomtestcard2.c dominion.c rngs.c
 	randomtestcard2 >> randomtestcard2.out
 	gcov randomtestcard2 dominion.c >> randomtestcard2.out
 
+randomtestadventurer.out: randomtestadventurer.c dominion.c rngs.c 
+	echo "Results for running random tests:" > randomtestadventurer.out
+	echo "randomtestadventurer:" >> randomtestadventurer.out
+	gcc -o randomtestadventurer randomtestadventurer.c dominion.o rngs.o $(CFLAGS)
+	randomtestadventurer >> randomtestadventurer.out
+	gcov randomtestadventurer dominion.c >> randomtestadventurer.out
 
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-all: playdom player testDrawCard testBuyCard badTestDrawCard randomtestcard1 randomtestcard2
+all: playdom player testDrawCard testBuyCard badTestDrawCard randomtestcard1 randomtestcard2 randomtestadventurer
 
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe badTestDrawCard randomtestcard1 randomtestcard2
+	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe badTestDrawCard randomtestcard1 randomtestcard2 randomtestadventurer
